correction de l'alignement de l'icone avec le texte sur le footer

--- a/css/style.css
+++ b/css/style.css
@@ -85,18 +85,17 @@ h3 {
 .header {
   background: white;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   box-shadow: #969393 0px 5px 5px -5px;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 .header__logo {
-  margin: 5px;
+  margin: 5px auto;
   padding-top: 15px;
   font-size: 2em;
 }
-
 .footer {
   background: #353535;
   padding: 20px;
@@ -122,7 +121,7 @@ h3 {
 }
 .footer .withicon {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 .footer .withicon__link {
   margin-left: 10px;
@@ -211,7 +210,7 @@ h3 {
   display: flex;
   flex-direction: column;
   background: #F6F6F6;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 .restaurants__title {
   padding-top: 20px;
