--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -28,8 +28,7 @@
 
     .withicon {
         display: flex;
-        align-items: center;
-
+        align-items: baseline;
         &__link {
             margin-left: 10px;
         }
